fix license