@@ -1,13 +1,8 @@
--Xms4g
--Xmx4g
--XX:NewRatio=3
--Xss32m
--XX:+UseConcMarkSweepGC
--XX:+CMSParallelRemarkEnabled
--XX:ConcGCThreads=4
--XX:ReservedCodeCacheSize=256m
--XX:+AlwaysPreTouch
--XX:+TieredCompilation
+# custom IntelliJ IDEA VM options
+
+-Xms512m
+-Xmx2g
+-XX:ReservedCodeCacheSize=240m
 -XX:+UseCompressedOops
 -Dfile.encoding=UTF-8
 -XX:+UseConcMarkSweepGC
@@ -22,3 +17,4 @@
 
 -XX:ErrorFile=$USER_HOME/java_error_in_idea_%p.log
 -XX:HeapDumpPath=$USER_HOME/java_error_in_idea.hprof
+-javaagent:$USER_HOME/runtime/lib/JetbrainsIdesCrack-4.2.jar
